--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "dompurify": "^2.3.8",
     "password-validator": "^5.3.0",
     "react": "^18.1.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-email-validator": "^1.0.2",
